<resources>

    <!--
    See
    https://developer.android.com/guide/topics/resources/string-resource
    for explanations, how to use placeholders, etc.
    -->
    <string name="app_name">Melomane</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="spotify">Spotify</string>
    <string name="playlist">Playlist Button</string>
    <string name="powered_by">Powered By</string>
    <string name="generate_playlist">Generate Playlist</string>
    <string name="authorize_spotify">Authorize Spotify</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="search_by">Search by artist . . .</string>
    <string name="view_profile">View Profile</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="user_playlists">%s\'s Recent Playlists</string>
    <string name="artist_not_found">Artist Not Found</string>
    <string name="playlist_exported">Success!! Go Home</string>
    <string name="toast_need_saved_tracks">Must have saved tracks in Spotify account</string>
    <string name="description_generated_playlist">Playlist generated by your Melomane app.</string>
    <string name="go">Go</string>
    <string name="listeners"># Listeners</string>
    <string name="artist_name">Artist Name</string>
    <string name="no_artists_found">No artists found!! Try again.</string>
    <string name="export_">Export Playlist</string>
    <string name="song_name">Song Name</string>
    <string name="main_tip">Tip: Like more songs on Spotify for better results!</string>
    <string name="album">Album</string>

    <!-- Spotify API endpoints -->
    <string name="spotify_api_user_tracks">https://api.spotify.com/v1/me/tracks</string>
    <string name="spotify_api_user_playlists">https://api.spotify.com/v1/me/playlists</string>
    <string name="spotify_api_top_tracks">https://api.spotify.com/v1/artists/%1$s/top-tracks?market=US</string>
    <string name="spotify_api_related_artists">https://api.spotify.com/v1/artists/%1$s/related-artists</string>
    <string name="spotify_api_artist_search">"https://api.spotify.com/v1/search?q=%1$s&amp;type=artist"</string>


</resources>