<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="402dp"
        android:layout_height="80dp"
        android:background="#7E7C7C"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/spotify"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/spotify_icon_rgb_green" />

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:background="#818080"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/text_artist"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/artist_name"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_listeners"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:text="@string/listeners"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/create_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>