<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:background="#636262">


        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="440dp"
            android:layout_height="86dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:id="@+id/container2"
                android:layout_width="249dp"
                android:layout_height="68dp"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/text_song"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/song_name"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_artist"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="20dp"
                    android:text="@string/artist_name"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="125dp"
                android:layout_height="27dp"
                android:contentDescription="@string/spotify"
                app:srcCompat="@drawable/spotify_logo_rgb_green" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>